# packages/dotypos/openapi/dotypos-api.yaml
@@ -116,9 +116,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Reservation'
+                $ref: '#/components/schemas/PaginatedReservations'
         '401':
           description: Unauthorized
           content:
@@ -1508,6 +1506,17 @@ components:
           type: string
           nullable: true
           description: Previous page number
+
+    PaginatedReservations:
+      allOf:
+        - $ref: '#/components/schemas/PaginationBase'
+        - type: object
+          properties:
+            data:
+              type: array
+              description: Array of reservations
+              items:
+                $ref: '#/components/schemas/Reservation'
 
     PaginatedCustomers:
       allOf:
